gl51-master/src/test/deca/context/invalid/test_rule3_33EqualsNull.deca
//Description
// On ne peut pas comparer un entier à NUll

{
    int a = 2;
    if(a == null){println("pas ok");}

}